data/all_generated_tests/raw_wast_tests/br_UnreachableCodeExecution_304.wast
;; 5. **Test Description:**    - A `br` instruction targeting a forward label, followed by an `unreachable` instruction, to see if incorrect stack management causes `unreachable` to be hit.    - **Constraint: Correct Operand Handling**    - **Differential Behavior: The Wizard Engine's detailed operand stack management should prevent this while WebAssembly could mishandle the stack and meet `unreachable`.**

(assert_invalid
  (module
    (func $test_operand_handling
      (block (result i32)
        (br 0 (i32.const 42))
        (unreachable)
      )
    )
  )
  "type mismatch"
)